# droidtool-deprecated

./: CMakeLists.txt
source/: context.c  context.h  main_thread.c  user.h
source/abyss/: event.h  log.h  produce.c  release.h
source/archive/: directory.c  directory.h  entries_check.c  entries_check.h  entry.h
source/backend/: back_system.c  back_system.h  backend_comm.h  interface.h  module.h
source/collect/: bitmap.c  bitmap.h  bitmap_access.h  doubly.h
source/common/: types.h
source/cpu/: device.c  device.h  device_slot.h
source/memory/: manager_wrap.c  manager_wrap.h
source/modules/casper3/: CMakeLists.txt  interface.c
source/platform/: non_ansi.c  non_ansi.h
source/thread/: governor.h
